# TreasureLooter

./: .gitignore
.github/: ReadMe.md
.github/workflows/: build.yaml
game/: CMakeLists.txt  CMakePresets.json
game/cmake/: add_vendor.cmake
game/src/: main.cpp
game/src/include/: context.hpp  flag.hpp  gameobject.hpp  image.hpp  inspector.hpp  log.hpp  macros.hpp  math.hpp  path.hpp  renderer.hpp  sdl_call.hpp  sprite.hpp  window.hpp
game/src/src/: context.cpp  image.cpp  inspector.cpp  log.cpp  math.cpp  renderer.cpp  window.cpp
